# swagger.yaml
@@ -203,3 +203,7 @@ definitions:
           $ref: '#/definitions/RawData'
       value:
         type: number
+      extra_data:
+        type: array
+        items:
+          $ref: '#/definitions/RawData'
